refs to proper figures with rules

--- a/sprawozdanie1/part2-rules.tex
+++ b/sprawozdanie1/part2-rules.tex
@@ -70,8 +70,10 @@
 	\input{figures/part2/task2/vote-rules-c45}
 	\input{figures/part2/task2/monk-rules}
 	\input{figures/part2/task2/monk-rules-c45}
+	
+	\\Reguły dla zbioru \emph{hpap} znajdują się na~rysunkach \ref{p2t2-hpap-rules} i~\ref{p2t2-hpap-rules-c45}, dla zbioru \emph{vote} na~rysunkach \ref{p2t2-vote-rules} i~\ref{p2t2-vote-rules-c45}, zaś dla zbioru \emph{monk1} na~rysunkach \ref{p2t2-monk-rules} oraz~\ref{p2t2-monk-rules-c45}.
 
-\item Przyjrzyj się niezależnie regułom pewnym i~możliwym (\emph{LEM}).
+\item \textbf{Przyjrzyj się niezależnie regułom pewnym i~możliwym (\emph{LEM}).}
 \end{itemize}
 
 %Dla chętnych:
