--- a/sprawozdanie2/part1-supervised.tex
+++ b/sprawozdanie2/part1-supervised.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 \item \textbf{
 Skonstruuj zbiór przykładów definiujący dwuargumentową funkcję ("bramkę") AND (File|New|Data set) i zachowaj go. Wszystkie 4 przykłady mają stanowić zbiór uczący. Jakie są klasy decyzyjne w tym zbiorze przykładów i jakie są ich liczności?}
-\\Zbiór uczący dla problemu "AND" pokazano w tabeli \ref{tab:dataset_and}.
+\\Zbiór uczący dla problemu "AND" pokazano w tabeli \ref{tab:dataset_and}. Klasy decyzyjne to "0" i "1". Klasa "0" ma liczność 3 a klasa "1" - liczność 1.
 \begin{table}[ch]
 	\centering
 	\caption{Zbiór uczący funkcji "AND"\label{tab:dataset_and}}
@@ -21,12 +21,6 @@ Skonstruuj zbiór przykładów definiujący dwuargumentową funkcję ("bramkę")
 	\end{tabular} 
 \end{table}
 
-
-\item \textbf{
-Wyszukaj w Pomocy hasło "Verification" i przeczytaj wszystkie pięć znalezionych tematów.}
-
-\item \textbf{
-Wyobraź sobie (narysuj) pożądaną funkcję odpowiedzi sieci (trójwymiarowy wykres zależności wyjścia od dwóch wejść).}
 
 \item \textbf{
 Skonstruuj liniową sieć jednowarstwową o architekturze 2-1 (File|New|Network, Type=Linear, przycisk Advise). Uaktywnij okno wykresu błędu średniokwadratowego (Statistics|Training graph). Naucz sieć na problemie AND (Train|Multilayer perceptron|Back propagation). Obejrzyj funkcję odpowiedzi sieci (Run|Responce surface) i błędy dla poszczególnych przypadków (Statistics|Case errors).}
@@ -91,7 +85,7 @@ Wejdź do edytora sieci (Network|Edit) i przypatrz się wagom neuronu wyjściowe
 \item \textbf{
 Skonstruuj zbiór przykładów definiujący dwuargumentową funkcję XOR i zachowaj go. Wszystkie 4 przykłady mają stanowić zbiór uczący.}
 
-Zbiór uczący dla funkcji XOR pokazano w tabel rys. \ref{tab:dataset_xor}. 
+Zbiór uczący dla funkcji XOR pokazano w tabeli \ref{tab:dataset_xor}. 
 
 \begin{table}[ch]
 	\centering
@@ -105,9 +99,6 @@ Zbiór uczący dla funkcji XOR pokazano w tabel rys. \ref{tab:dataset_xor}.
 	\hline 
 	\end{tabular} 
 \end{table}
-
-\item \textbf{
-Wyobraź sobie (narysuj) pożądaną funkcję odpowiedzi sieci.}
 
 \item \textbf{
 Skonstruuj liniową sieć jednowarstwową o architekturze 2-1 i naucz ją na problemie XOR.}
@@ -137,7 +128,7 @@ Jak widać na rysunkach \ref{fig:response_linear_xor}, \ref{fig:error_linear_xor
 
 \item \textbf{
 Przerób sieć na nieliniową sieć jednowarstwową i naucz ją na tym samym problemie (zwróć uwagę, jak sieć stara się minimalizować błąd). Obejrzyj, jak zmienia się rozkład wag podczas procesu uczenia (Statistics|Weight distribution).}
-\\Błąd średniokwadratowy i funkcję odpowiedzi sieci nieliniowej jednowarstwowej dla problemu "XOR" przedstawiono na rysunkach \ref{fig:error_nonlinear_xor} i \ref{fig:response_nonlinear_xor}.
+\\Błąd średniokwadratowy i funkcję odpowiedzi sieci nieliniowej jednowarstwowej dla problemu "XOR" przedstawiono na rysunkach \ref{fig:error_nonlinear_xor} i \ref{fig:response_nonlinear_xor}. Sieć minimalizuje błąd w 3 punktach: (0,0), (0,1), (1,0), ale ponieważ ma tylko jedną warstwę nie może minimalizować błędu w czwartym punkcie: (1,1).
 
 \begin{figure}[h]
 \centering
@@ -153,7 +144,7 @@ Przerób sieć na nieliniową sieć jednowarstwową i naucz ją na tym samym pro
 
 \item \textbf{
 Skonstruuj nieliniową sieć dwuwarstwową o architekturze 2-2-1 (File|New|Network, Type=Multilayer perceptron) i naucz ją na problemie XOR. Obejrzyj funkcję odpowiedzi.}
-\\Funkcję odpowiedzi i błąd średniokwadratowy przedstawiono na rys. \ref{fig:response_221_xor} i \ref{fig:error_221_xor}
+\\Funkcję odpowiedzi i błąd średniokwadratowy przedstawiono na rys. \ref{fig:response_221_xor} i \ref{fig:error_221_xor}. Jak widać, dzięki drugiej warstwie sieci funkcja odpowiedzi może lepiej dopasować się do danych uczących.
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.75]{dane/part1/zad2/response_221_xor}
@@ -165,7 +156,6 @@ Skonstruuj nieliniową sieć dwuwarstwową o architekturze 2-2-1 (File|New|Netwo
 \includegraphics[width=0.6\textwidth]{dane/part1/zad2/error_221_xor}
 \caption{Błąd średniokwadratowy sieci nieliniowej 2-2-1 dla problemu "XOR"..\label{fig:error_221_xor}}
 \end{figure}
-
 
 \item \textbf{
 Obejrzyj wagi sieci w edytorze sieci (Edit|Network). Jakie proste definiują neurony w warstwie ukrytej (spróbuj je narysować w przestrzeni wejść) ? Jak można interpretować działanie neuronu wyjściowego ?}
@@ -180,7 +170,7 @@ Obejrzyj wagi sieci w edytorze sieci (Edit|Network). Jakie proste definiują neu
 
 \item \textbf{
 Obejrzyj, jak zmienia się rozkład wag podczas procesu uczenia. Jaka jest przyczyna takiego zachowania wag i jakie to może mieć konsekwencje (z "informatycznego" punktu widzenia) ?}
-\\Na początku wagi zbliżają się do bardzo małyych wartości bliskich zeru, co może doprowadzić do tego, że z powodu skończonej precyzji zapisu liczb rzeczywistych zostaną one wyzerowane.
+\\Na początku wagi zbliżają się do bardzo małych wartości bliskich zeru, co może doprowadzić do tego, że z powodu skończonej precyzji zapisu liczb rzeczywistych zostaną one wyzerowane.
 
 \end{enumerate}
 
@@ -192,12 +182,6 @@ Obejrzyj, jak zmienia się rozkład wag podczas procesu uczenia. Jaka jest przyc
 
 \item \textbf{
 Wczytaj zbiór PIMA i skonstruuj dla niego dwuwarstwową sieć nieliniową o architekturze 8-4-1.}
-
-\item \textbf{
-Obejrzyj ustawienia w okienku Pre/Post Processing.}
-
-\item \textbf{
-Wyłącz "inkrementacyjne" warunki stopu ustawiając np. zero lub dużą wartość parametru Window w oknie Stopping Conditions.}
 
 \item \textbf{
 Przeprowadź uczenie algorytmem wstecznej propagacji błędu (może być bardzo długie, np. 20 000 epok); obserwuj przebieg błędu dla zbioru uczącego i weryfikującego.}
@@ -223,21 +207,21 @@ Przedstaw w gnuplocie na jednym wykresie przebieg błędu uczenia dla kolejnych 
 \caption{Błąd średniokwadratowy popełniany przez sieć dla różnych szerokości warstwy ukrytej.\label{fig:errors4n3}}
 \end{figure}
 
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{dane/part1/zad4/errors4n3-zoom}
+\caption{Błąd średniokwadratowy popełniany przez sieć dla różnych szerokości warstwy ukrytej - przybliżenie.\label{fig:errors4n3-zoom}}
+\end{figure}
+
 \item \textbf{
 Czy istnieje jednoznaczna zależność pomiędzy n a przebiegiem błędu średniokwadratowego? Czy biorąc pod uwagę tylko przebeg błędu dla zbioru uczącego można ustalić optymalną liczbę neuronów w warstwie ukrytej? Jeśli tak, to ile ona wynosi dla tego zbioru przykładów?}
-\\Nie, nie isrtnieje taka jednoznaczna zależność. Wielkości błędu dla różnych ilości neuronów w warstwie ukrytej są bardzo zbliżone. Jedynie dla n równego 3, 5, lub 9 błąd jest nieznacznie mniejszy, jednak ze względu na brak monotoniczności funkcji błędu względem ilości neuronów, wydaje się, że jest to przypadkowa różnica. Na podstawie samego przebiegu błędu nie można ustalić optymalnej ilości neuronów w warstwie ukrytej.
+\\Nie, nie isrtnieje taka jednoznaczna zależność. Wielkości błędu dla różnych ilości neuronów w warstwie ukrytej są bardzo zbliżone. Jedynie dla n równego 2, 3, lub 5 błąd jest nieco większy, jednak ze względu na brak monotoniczności funkcji błędu względem ilości neuronów, wydaje się, że jest to przypadkowa różnica. Na podstawie samego przebiegu błędu nie można ustalić optymalnej ilości neuronów w warstwie ukrytej.
 \end{enumerate}
 
 
 \subsection{Sterowanie rozmiarem obszaru niepewnych odpowiedzi (braku odpowiedzi) sieci na granicach klas decyzyjnych (podczas testowania sieci)}
 \begin{enumerate}
 \item \textbf{Utwórz i naucz sieć na zbiorze PIMA (architektura 8-4-1).}
-
-\item \textbf{
-Przeprowadź klasyfikowanie przykładów ze zbioru testującego (okno Statistics|Classification). Znajdź w tym oknie macierz pomyłek (ang. confusion matrix).}
-
-\item \textbf{
-Otwórz okno Edit|Pre-Post Processing. Pola Accept i Reject definiują, jakie wartości muszą mieć neurony w warstwie wyjściowej, aby móc zinterpretować ich stan jako decyzję o przypisaniu przykładu do odpowiedniej klasy decyzyjnej. Choć nie jest to kontrolowane przez program, powinno zachodzić Accept $ >= $ Reject}
 
 \item \label{zad:7}\textbf{
 Przy użyciu gnuplota sporządź wykres (trzy przebiegi na jednym wykresie) zależności procentu przypadków z jednego ze zbiorów (uczącego / weryfikującego / testującego):
@@ -262,6 +246,7 @@ w funkcji progu Accept, dla następujących wartości Accept i Reject:
 		\hline 
 	\end{tabular}
 \end{table}
+Wykres pokazano na rysunku \ref{fig:confusionTrain}.
 
 \begin{figure}[h]
 \centering
@@ -276,19 +261,17 @@ Czy na podstawie otrzymanego wykresu można zasugerować jakąś optymalną wart
 
 \end{enumerate}
 
-%TODO: continue from this point
 \subsection{Badanie odporności sieci na uszkodzenia}
 \begin{enumerate}
 \item \textbf{Skonstruuj sieć dwuwarstwową o architekturze 4-3-3 dla problemu IRIS i naucz ją.}
 
-\item \textbf{
-Przeprowadź testowanie i zapisz trafność klasyfikowania.}
 
 \item \textbf{
 Otwórz edytor sieci (Edit|Network). Wyszukaj (w obu warstwach: ukrytej i wyjściowej!) i usuń z sieci (tj. wyzeruj) wagę najmniejszą co do wartości bezwzględnej (pomiń wiersz Threshold, zawierający progi neuronów). Przeprowadź ponownie testowanie sieci i zapisz wynik.}
 
 \item \textbf{
 Kroki z punku 3 powtórz ok. 10 razy, kolejno usuwając coraz większe wagi i notując trafność klasyfikowania. Sporządź wykres zależności trafności klasyfikowania w funkcji ilości usuniętych (najmniejszych) wag.}
+\\Wykres pokazano na rysunku \ref{fig:damages}.
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.8\textwidth]{dane/part1/zad8/damages}
@@ -297,7 +280,7 @@ Kroki z punku 3 powtórz ok. 10 razy, kolejno usuwając coraz większe wagi i no
 
 \item \textbf{
 Czy odporność sieci na uszkodzenia (usunięcia wag) jest wysoka?}
-\\Tak. Widać to na rysunku \ref{fig:damages}. Bez żadnej szkody dla trafności klasyfikacji można wyzerować pierwsze 5 najmniejszych wag - ich wartości byłY bliskie zeru. Po zerowaniu kolejnych wag trafność spada, by nagle, po usunięciu wagi 11 znów wzrosnąć.
+\\Tak. Widać to na rysunku \ref{fig:damages}. Bez żadnej szkody dla trafności klasyfikacji można wyzerować pierwsze 5 najmniejszych wag - ich wartości były bliskie zeru. Po zerowaniu kolejnych wag trafność spada, by nagle, po usunięciu wagi 11 znów wzrosnąć.
 
 \item \textbf{
 Czy jesteś w stanie na podstawie tak “zredukowanej” sieci powiedzieć coś o ważności poszczególnych atrybutów opisujących przykłady?}
@@ -325,7 +308,7 @@ Tak, w przypadku sieci (pokazanej w tabeli \ref{tab:zeroweights}), w której wyz
 \item \textbf{
 Czy w konsekwencji “przerzedzenia” sieci można usunąć niektóre neurony? Jak należy to zrobić?
  (przemyśl dokładnie).}
- \\Wagi pierwszego neuron z pierwszej warstwy ukrytej (h1\#01) zostały całkowicie wyzerowane (zarówno wagi na jego wejściach jak i wszystkie wagi na wejściach następnej warstwy, do których jest on podłączony), co widać w tabeli \ref{tab:zeroweights}. Dlatego wydaje się, że możnaby go usunąć bez wpływu na działanie sieci. Jednak, ponieważ w analizowanej sieci używana była nieliniowa (sigmoidalna) funkcja przenosząca (w terminologii SNN: activation function. W \cite{umisn} mianem "funkcja aktywacji" określa się tę funkcję, która w SNN jest nazywana PSP (Post Synaptic Potential function), to wspomniany neuron można "bezkarnie" usunąć jedynie, jeśli wyzerowane są wszystkie wagi wejść, do których jest on połączony - wyzerowanie jedynie wejść tego neuronu nie wystarcza, ponieważ wartość funkcji aktywacji $ f(0) = \frac{1}{1 + e^{-0}} = \frac{1}{2} \neq 0 $ , a właśnie wartość 0 pojawiłaby się na odpowiednich wejściach neuronów z 3 warstwy gdyby usunąć całkowicie neuron h1\#01.
+ \\Wagi pierwszego neuron z pierwszej warstwy ukrytej (h1\#01) zostały całkowicie wyzerowane (zarówno wagi na jego wejściach jak i wszystkie wagi na wejściach następnej warstwy, do których jest on podłączony), co widać w tabeli \ref{tab:zeroweights}. Dlatego wydaje się, że można by go usunąć bez wpływu na działanie sieci. Jednak, ponieważ w analizowanej sieci używana była nieliniowa (sigmoidalna) funkcja przenosząca (w terminologii SNN: activation function. W \cite{umisn} mianem "funkcja aktywacji" określa się tę funkcję, która w SNN jest nazywana PSP - Post Synaptic Potential function), to wspomniany neuron można "bezkarnie" usunąć jedynie, jeśli wyzerowane są wszystkie wagi wejść, do których jest on połączony - wyzerowanie jedynie wejść tego neuronu nie wystarcza, ponieważ wartość funkcji aktywacji $ f(0) = \frac{1}{1 + e^{-0}} = \frac{1}{2} \neq 0 $ , a właśnie wartość 0 pojawiłaby się na odpowiednich wejściach neuronów z 3 warstwy gdyby usunąć całkowicie neuron h1\#01.
 \end{enumerate}
 
 \subsection{ Eksperymentalny dobór rozmiaru zbioru weryfikującego}
@@ -334,7 +317,7 @@ Dla zbioru IRIS, PIMA lub BUPA przeprowadź eksperyment uczenia i testowania, zm
 \item \textbf{Zacznij od następujących proporcji zbioru uczącego, weryfikującego i testującego 8:1:1.}
 
 \item \textbf{
-Przeprowadź uczenie (liczba epok $ >= $ 300). Przetestuj sieć, zapisz trafność klasyfikowania, błąd klasyfikowania i procent przykładów niezaklasyfikowanych.}
+Przeprowadź uczenie (liczba epok $ \geq 300 $). Przetestuj sieć, zapisz trafność klasyfikowania, błąd klasyfikowania i procent przykładów niezaklasyfikowanych.}
 
 \item \textbf{
 Sukcesywnie zwiększaj rozmiar zbioru weryfikującego, zmniejszając rozmiar uczącego (pole Training w oknie Edit|Data set), do proporcji 1:8:1 włącznie.}
@@ -358,7 +341,7 @@ Sporządź wykres zależności trafności klasyfikowania, błędu klasyfikowania
 \\
 Uwaga. Algorytmy QuickProp i DeltaBarDelta mogą okazać się trochę niestabilne (w ogólności łatwiej niż backprop wpadają w minima lokalne). W takim przypadku trzeba się trochę pobawić parametrami.}
 
-Dlatestowanych zbiorów danych najlepszym algorytmem okazał się zwykły \emph{\textit{Vanilla} Back Propagation} (rysunki \ref{fig:epochs-iris} i \ref{fig:epochs-pima}. Co prawda \emph{Delta-Bar-Delta} kończył działanie szybciej, ale osiągał znacznie gorsze wyniki, co widać na rysunku \ref{fig:errors-pima}.
+Dlat estowanych zbiorów danych najlepszym algorytmem okazał się zwykły \emph{\textit{Vanilla} Back Propagation} (rysunki \ref{fig:epochs-iris} i \ref{fig:epochs-pima}. Co prawda \emph{Delta-Bar-Delta} kończył działanie szybciej, ale osiągał znacznie gorsze wyniki, co widać na rysunku \ref{fig:errors-pima}.
 
 
 \begin{figure}[h]
@@ -407,8 +390,8 @@ Obejrzyj funkcję odpowiedzi wybranych neuronów w warstwie ukrytej i neuronów 
 
 \item \textbf{
 Zastanów się, jakie konsekwencje ma niewłaściwy dobór promieni. Co będzie się działo, gdy promienie będą za duże? Co, gdy za małe? (związek z generalizacją).}
-\\Im szerszy promień tym więcej przykładów obejmuje swoim zasięgiem każdy z neuronów w warstwie ukrytej i z tym mniejszą rozdzielczością odróżnia od siebie różne przykłady. Jeśli promień będzie  duży, to zdolność sieci do generalizacji (klasyfikacji nieznanych przykładów) będzie większa, ale jednocześnie sieć będzie mniej szczegółowa - mniejsza będzie różnica w odpowiedzi dla dwóch różnych przykładów. W skrajnym przypadku każde z centrów będzie odpowiadać na każdy z przykładów i ich odpowiedzi będą bardzo podobne - wtedy warstwa ukryta sieci praktycznie nie działa i taką sieć możnaby zastąpić 2 warstwową sięcią liniową.
-\\Jeśli promienie będą małe, to funkcje gausowskie będą bardziej szpiczaste i sieć może utracić zdolność do generalizacji - nowe przykłady mogą nie pasować do żadnego z centrów i w rezultacie nie będą rozróżnialne - nie zostaną przydzielone do żadnej z klas.
+\\Im szerszy promień tym więcej przykładów obejmuje swoim zasięgiem każdy z neuronów w warstwie ukrytej i z tym mniejszą rozdzielczością odróżnia od siebie różne przykłady. Jeśli promień będzie  duży, to zdolność sieci do generalizacji (klasyfikacji nieznanych przykładów) będzie większa, ale jednocześnie sieć będzie mniej szczegółowa - mniejsza będzie różnica w odpowiedzi dla dwóch różnych przykładów. W skrajnym przypadku każde z centrów będzie odpowiadać na każdy z przykładów i ich odpowiedzi będą bardzo podobne - wtedy warstwa ukryta sieci praktycznie nie działa i taką sieć można by zastąpić 2 warstwową sięcią liniową.
+\\Jeśli promienie będą małe, to funkcje gausowskie będą bardziej szpiczaste i sieć może utracić zdolność do generalizacji - nowe przykłady mogą nie pasować do żadnego z centrów i w rezultacie nie będą rozróżnialne - nie zostaną przydzielone do żadnej z klas, albo zostaną przydzielone do przypadkowej klasy.
 
 \item \textbf{
 Przetestuj sieć dla różnych metod uczenia, tj. dla różnych inicjalizacji centrów (Sample, K-means) i różnych sposobów ustalania odchyleń (Explicit, Isotropic, K-nearest). Najlepiej miej otwarty edytor sieci; obserwuj jakie konsekwencje ma wybranie poszczególnych sposobów uczenia.}
@@ -434,6 +417,7 @@ Porównaj sieć RBF z siecią typu Multilayer Perceptron na trudniejszym zbiorze
 \end{enumerate}
 
 \subsection{ Uzyskiwanie jak najwyższej trafności}
+\textbf{
 Manipulując:
 \begin{itemize}
 \item \textbf{architekturą sieci,}
@@ -442,9 +426,7 @@ Manipulując:
 \item \textbf{warunkami stopu (statycznymi i/lub dynamicznymi),}
 \item \textbf{rodzajem algorytmów,}
 \end{itemize}
-spróbuj uzyskać jak największą trafność klasyfikowania na zbiorze testującym dla zbioru PIMA lub BUPA.
-\\Jeśli możesz, porównaj uzyskany wynik z trafnością otrzymaną przy użyciu drzew decyzyjnych.
-\\Aby zapewnić porównywalność wyników i powtarzalność eksperymentu, nie zmieniaj oryginalnego przyporządkowania przykładów do zbiorów uczącego, weryfikującego i testującego.
+spróbuj uzyskać jak największą trafność klasyfikowania na zbiorze testującym dla zbioru PIMA lub BUPA.}
 \\Największą trafność klasyfikacji zbioru PIMA - 0.76  - udało się otrzymać stosując zwykły algorytm Back Propagation o parametrach: prędkość uczenia: 0.1, moment: 0.33. Nie jest to wynik średni, lecz najlepszy uzyskany w kilku próbach. Jest on porównywalny z wynikami klasyfikacji PIMA raportowanymi w \cite{duch10}.
 \begin{figure}[h]
 \centering
